Fix scrollbar in song history

--- a/src/www/style.css
+++ b/src/www/style.css
@@ -245,7 +245,9 @@ body.player-page {
 	background-color: rgba(0, 0, 0, 0);
 	display: flex;
 	flex-direction: column;
+	flex: 1;
 	max-width: 100%;
+	min-height: 0;
 	padding: 0 30px 30px;
 	gap: 16px;
 }
